--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "redux-devtools-extension": "^2.13.8",
     "faker": "^5.3.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
