--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "faker": "^5.3.1",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
+    "prettier": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -29,6 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
