--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lingui/react": "^2.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -33,7 +34,10 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lingui:add-locale": "lingui add-locale",
+    "lingui:extract": "lingui extract",
+    "lingui:compile": "lingui compile"
   },
   "eslintConfig": {
     "extends": [
