--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "connected-react-router": "^6.8.0",
     "faker": "^5.3.1",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
@@ -27,7 +28,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "vazir-font": "^26.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
